--- a/MundoPlay/MundoPlay/MundoPlay.csproj
+++ b/MundoPlay/MundoPlay/MundoPlay.csproj
@@ -46,6 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CadastroFilme.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CadastroFilme.Designer.cs">
+      <DependentUpon>CadastroFilme.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CadastroHome.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CadastroHome.Designer.cs">
+      <DependentUpon>CadastroHome.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +78,12 @@
     <Compile Include="usuario.Designer.cs">
       <DependentUpon>usuario.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="CadastroFilme.resx">
+      <DependentUpon>CadastroFilme.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CadastroHome.resx">
+      <DependentUpon>CadastroHome.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
