--- a/MundoPlay/MundoPlay/MundoPlay.csproj
+++ b/MundoPlay/MundoPlay/MundoPlay.csproj
@@ -76,11 +76,11 @@
     <Compile Include="CadastroHome.Designer.cs">
       <DependentUpon>CadastroHome.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="principal.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="principal.Designer.cs">
+      <DependentUpon>principal.cs</DependentUpon>
     </Compile>
     <Compile Include="GerenciarHome.cs">
       <SubType>Form</SubType>
@@ -117,8 +117,8 @@
     <EmbeddedResource Include="CadastroHome.resx">
       <DependentUpon>CadastroHome.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="principal.resx">
+      <DependentUpon>principal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GerenciarHome.resx">
       <DependentUpon>GerenciarHome.cs</DependentUpon>
