--- a/MundoPlay/MundoPlay/MundoPlay.csproj
+++ b/MundoPlay/MundoPlay/MundoPlay.csproj
@@ -52,17 +52,17 @@
     <Compile Include="admUser.Designer.cs">
       <DependentUpon>admUser.cs</DependentUpon>
     </Compile>
-    <Compile Include="CadastroFilme.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="CadastroFilme.Designer.cs">
-      <DependentUpon>CadastroFilme.cs</DependentUpon>
-    </Compile>
     <Compile Include="CadastroHome.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="CadastroHome.Designer.cs">
       <DependentUpon>CadastroHome.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ConsultarHome.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConsultarHome.Designer.cs">
+      <DependentUpon>ConsultarHome.cs</DependentUpon>
     </Compile>
     <Compile Include="principal.cs">
       <SubType>Form</SubType>
@@ -93,11 +93,11 @@
     <EmbeddedResource Include="admUser.resx">
       <DependentUpon>admUser.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="CadastroFilme.resx">
-      <DependentUpon>CadastroFilme.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="CadastroHome.resx">
       <DependentUpon>CadastroHome.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ConsultarHome.resx">
+      <DependentUpon>ConsultarHome.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="principal.resx">
       <DependentUpon>principal.cs</DependentUpon>
